# nautilus-rust

./: .gitignore  Kconfig  Makefile  run
include/acpi/: actypes.h
include/dev/: virtio_gpu.h
include/nautilus/: acpi.h  aspace.h  barrier.h  fs.h  nautilus.h  paging.h
root/: hello.txt
scripts/: Makefile.build  setup_doom.sh  setup_rust.sh
src/: Makefile
src/PureDOOM/: Makefile  PureDOOM.c  PureDOOM.h
src/PureDOOM/DOOM/: DOOM.c  Makefile  d_main.c  m_misc.c  r_draw.c  r_things.c  v_video.c
src/arch/x64/: init.c
src/dev/: Kconfig  Makefile  virtio_gpu.c
src/fs/: Kconfig
src/fs/lfs/: lfs_bind.c
src/nautilus/: fs.c
src/rust/: .gitignore  Cargo.toml  Makefile  bindgen_wrapper.h  build.rs  fmod_hack.sh  gen_wrapper.sh  glue.c  parport.c  x86_64-nautilus-core-kernel.json
src/rust/.cargo/: config.toml
src/rust/src/: lib.rs  nk_alloc.rs  nk_bindings.rs  nk_panic.rs  nk_shell_cmd.rs  prelude.rs  utils.rs
src/rust/src/async_demo/: mod.rs
src/rust/src/example/: async_demo.rs  example.rs  mod.rs  nk_shell_cmd.rs
src/rust/src/kernel/: allocator.rs  bindings.rs  chardev.rs  error.rs  gpudev.rs  irq.rs  mod.rs  print.rs  shell.rs  sync.rs  thread.rs  timer.rs  utils.rs
src/rust/src/kernel/task/: executor.rs  mod.rs  simple_executor.rs  utils.rs
src/rust/src/parport/: chardev.rs  irq.rs  lock.rs  mod.rs  nk_shell_cmd.rs  portio.rs  virtio.c  virtio_gpu.rs
src/rust/src/task/: executor.rs  mod.rs  readme.md  utils.rs
src/rust/src/thread_demo/: mod.rs
src/rust/src/virtio/: mod.rs  virtio_gpu.rs
src/rust/src/virtio_gpu/: mod.rs
