[package]
name = "nk_rust"
version = "0.0.0"
edition = "2021"
authors = [
    "Michael Polinski <michaelp@u.northwestern.edu>",
    "Hanming Wang <hanmingwang2022@u.northwestern.edu>",
    "Qingwei Lan <qingweilan2022@u.northwestern.edu>",
    "Peter Dinda <pdinda@northwestern.edu>",
]

[lib]
crate-type = ["staticlib"]

[build-dependencies]
bindgen = "0.65.1"

[dependencies]
bitfield = "0.14.0"
x86_64 = "0.14.10"
lock_api = "0.4.9"
