[package]
name = "nk_rust"
version = "0.1.0"
edition = "2021"
authors = [
    "Matthew Sinclair <matthewsinclair2024@u.northwestern.edu>",
    "Conor Kotwasinski <conorkotwasinski2024@u.northwestern.edu>",
    "Ian Armstrong <ianarmstrong2022@u.northwestern.edu>",
    "Charles Zhou <charleszhou2023@u.northwestern.edu>",
    "Michael Polinski <michaelp@u.northwestern.edu>",
    "Hanming Wang <hanmingwang2022@u.northwestern.edu>",
    "Qingwei Lan <qingweilan2022@u.northwestern.edu>",
    "Peter Dinda <pdinda@northwestern.edu>",
]

[lib]
crate-type = ["staticlib"]

[build-dependencies]
bindgen = "0.65.1"

[dependencies]
bitfield = "0.14.0"
x86_64 = "0.14.10"
lock_api = "0.4.9"
paste = "1.0.12"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.futures-util]
version = "0.3.28"
default-features = false
features = ["alloc"]
